Adding middleware roles
